// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when system check fails > shows error when git is missing > system-check-failure 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 System Check                                                         Todo (0/6)

 Checking that your system has everything we need.                    ✘ Check system
                                                                      ○ Select features
 ✔ Node.js vX.Y.Z                                                     ○ Log in to Confidence
 ✘ Git                                                                ○ Set up your agent
                                                                      ○ Install MCPs
 Some required tools are missing. Install them and retry.             ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Required tools are missing.

 ❯ Retry
   Quit

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;

exports[`when system check fails > shows error when node is not on PATH > system-check-node-missing 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 System Check                                                         Todo (0/6)

 Checking that your system has everything we need.                    ✘ Check system
                                                                      ○ Select features
 ✘ Node.js                                                            ○ Log in to Confidence
 ✔ Git X.Y.Z                                                          ○ Set up your agent
                                                                      ○ Install MCPs
 Some required tools are missing. Install them and retry.             ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Required tools are missing.

 ❯ Retry
   Quit

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;
